--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "schema": "mysql -u root -p < db/schema.sql",
     "seed": "node seeders/seeds.js"
   },
   "repository": {
@@ -19,14 +20,14 @@
   },
   "homepage": "https://github.com/JColeCodes/rosas-envelopes#readme",
   "dependencies": {
-    "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "graphql": "^16.6.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4",
+    "express-session": "^1.17.3",
+    "mysql2": "^3.0.1",
+    "sequelize": "^6.28.0",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
