--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0",
     "socket.io": "^4.5.1"
